--- a/airdnb/build.gradle
+++ b/airdnb/build.gradle
@@ -18,7 +18,12 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  // Spring Data JPA
     implementation 'org.springframework.boot:spring-boot-starter-web'       // Spring Web
-    implementation 'com.mysql:mysql-connector-j:8.3.0' // mysql 의존성 추가
+    implementation 'com.mysql:mysql-connector-j:8.3.0'                      // mysql 의존성 추가
+    compileOnly 'org.projectlombok:lombok:1.18.32'                          // Lombok 의존성 추가
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.32'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
