--- a/airbnb/.gitignore
+++ b/airbnb/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/windows,macos,java,intellij
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,java,intellij
+# Created by https://www.toptal.com/developers/gitignore/api/windows,macos,intellij,java,gradle
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,intellij,java,gradle
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -199,10 +199,36 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-.idea
+### Gradle ###
 .gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
+
+# Cache of project
+.gradletasknamecache
+
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+### Gradle Patch ###
+# Java heap dump
+*.hprof
+
+.idea
 
 # Application configuration
 /application.properties
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,macos,java,intellij
+# End of https://www.toptal.com/developers/gitignore/api/windows,macos,intellij,java,gradle
