--- a/.github/workflows/cicd_front_prod_pipeline.yaml
+++ b/.github/workflows/cicd_front_prod_pipeline.yaml
@@ -55,7 +55,7 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_KEY }}
         script: |
-          cd /home/ubuntu/front
+          cd /home/ubuntu/deploy
           sudo ./deploy.sh
 
 
