--- a/.github/workflows/cicd_back_prod.yml
+++ b/.github/workflows/cicd_back_prod.yml
@@ -7,7 +7,6 @@ on:
 
 concurrency:
   group: squadbnb-prod
-  cancel-in-progress: true
 
 jobs:
   build:
@@ -53,4 +52,4 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             cd /home/ubuntu/deploy
-            sudo ./deploy.sh
+            sudo ./deploy_back.sh
