--- a/airdnb/build.gradle
+++ b/airdnb/build.gradle
@@ -15,28 +15,31 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set('springCloudVersion', "2023.0.0")
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  // Spring Data JPA
     implementation 'org.springframework.boot:spring-boot-starter-web'       // Spring Web
+    implementation 'org.springframework.cloud:spring-cloud-starter'         // Spring Cloud 모듈 의존성
     implementation 'com.mysql:mysql-connector-j:8.3.0'                      // mysql 의존성 추가
     compileOnly 'org.projectlombok:lombok:1.18.32'                          // Lombok 의존성 추가
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign' //OpenFeign
 
     testCompileOnly 'org.projectlombok:lombok:1.18.32'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
 
-    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
-    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 tasks.named('test') {
     useJUnitPlatform()
-}
-
-clean {
-    delete file('src/main/generated')
 }
