--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'org.hibernate.orm:hibernate-core'
     implementation 'org.hibernate.orm:hibernate-spatial'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    // Jackson
+    implementation 'com.bedatadriven:jackson-datatype-jts:2.4'
+
 
     //Querydsl
     implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
