--- a/.github/workflows/cicd_front_prod_pipeline.yaml
+++ b/.github/workflows/cicd_front_prod_pipeline.yaml
@@ -55,7 +55,7 @@ jobs:
         key: ${{ secrets.EC2_KEY }}
         script: |
           cd /home/ubuntu/deploy
-          sudo ./deploy_front.sh
+          sudo ./deploy_front.sh -y
 
 
           
