--- a/airdnb/build.gradle
+++ b/airdnb/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'com.mysql:mysql-connector-j:8.3.0'                      // mysql 의존성 추가
     compileOnly 'org.projectlombok:lombok:1.18.32'                          // Lombok 의존성 추가
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // thymeleaf 의존성 추가
 
     testCompileOnly 'org.projectlombok:lombok:1.18.32'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
