--- a/airdnb/build.gradle
+++ b/airdnb/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.0'
+    id 'org.springframework.boot' version '3.2.0'
     id 'io.spring.dependency-management' version '1.1.5'
 }
 
@@ -27,6 +27,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.32'                          // Lombok 의존성 추가
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign' //OpenFeign
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'                               //jwt
 
     testCompileOnly 'org.projectlombok:lombok:1.18.32'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
