Chore : 오타수정 , 주석 추가
Chore. mock.sql 수정
Chore. Accommodation 오타 수정

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -2,4 +2,6 @@ spring:
   application:
     name: airbnb
   config:
-    import: app_settings/dev-db-config.yml, app_settings/oauth-config.yml
+    import:
+      - app_settings/dev-db-config.yml
+      - app_settings/oauth-config.yml
