--- a/airdnb/build.gradle
+++ b/airdnb/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // thymeleaf 의존성 추가
 
+    implementation 'org.springframework.boot:spring-boot-starter-mail'      // java mail 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-validation' // java mail 의존성 추가
+
     testCompileOnly 'org.projectlombok:lombok:1.18.32'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
