--- a/FE/package.json
+++ b/FE/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@types/googlemaps": "^3.43.3",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18"
