--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -39,6 +39,9 @@ jobs:
     needs: build
     
     steps:
+    - name: print current directory
+      run: pwd
+      
     - name: Build with Gradle
       run: |
             chmod +x ./airdnb/gradlew
