--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -39,8 +39,7 @@ jobs:
     needs: build
     
     steps:
-    - name: print current directory
-      run: pwd
+    - uses: actions/checkout@v2
       
     - name: Build with Gradle
       run: |
