🚑 fix: github actions 경로 오류 수정

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -49,8 +49,7 @@ jobs:
 =======
     
     steps:
-    - name: print current directory
-      run: pwd
+    - uses: actions/checkout@v2
       
     - name: Build with Gradle
       run: |
