--- a/airbnb/src/main/resources/application.properties
+++ b/airbnb/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/
 spring.datasource.username=
 spring.datasource.password=
+
+logging.level.team8.airbnb=debug
+spring.jpa.show-sql=true
