--- a/FE/package.json
+++ b/FE/package.json
@@ -10,20 +10,22 @@
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
-    "@types/googlemaps": "^3.43.3",
+    "@types/google.maps": "^3.55.9",
+    "google-map-react": "^2.2.1",
     "next": "^14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-googlemaps": "^1.4.15",
     "postcss": "^8",
     "prettier": "^3.3.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
