feat: 스테이 조회 기능 구현
- 코멘트 조회는 status 고려하여 조회해야하므로 코멘트 레포에게 위임

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ out/
 .vscode/
 
 src/main/resources/application.properties
+src/main/resources/schema.sql
+src/test/resources/application.properties
+src/test/resources/schema.sql
