Feat/#1 Entity class 생성 (#2)
* [feat/#1] :sparkles: feat: ERD 기반 Entity 클래스 생성

- OneToMany 연관관계 매핑 제외 Entity 클래스 작업

* [feat/#1] :adhesive_bandage: fix: OneToOne 연관관계 수정, 생성자 접근 제어자 private로 변경, EmbeddedId 생성자 및 초기화 로직 추가, Accommodation 아이디 타입 변경

- OneToOne 연관관계 주인 측에 mappedBy 사용하도록 변경
- 직접 선언한 생성자의 경우 Builder 어노테이션으로 생성자 인수 순서 변경으로 인한 실수 방지하도록 하였음. 따라서 생성자 접근 제어자를 private로 변경해야함. 변경 완료
- EmbeddedId는 JPA에서 관리해주지 않고, 직접 입력해 초기화해야 하므로 LikeId와 같은 복합키 클래스에 생성자 추가, 해당 복합키 클래스 사용하는 쪽 생성자에도 복합키 초기화하는 로직 추가함
- Accommodation 아이디 타입 String으로 오기입되어있던 부분 Long으로 변경함

* [feat/#1] :adhesive_bandage: fix: 생성자에 누락된 칼럼 추가, Booking과 Payment 사이 칼럼 매핑 오기입된 부분 수정

* [feat/#1] :construction_worker: chore: application.yml에 ddl-auto 및 로깅 옵션 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,32 @@
 spring:
   application:
     name: airbnb
+
+  # h2 console
   h2:
     console:
       enabled: true
       path: /h2-console
+
+  # datasource - h2 (for test)
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:~/airbnb
     username: sa
     password:
+
+  # ddl-auto
+  jpa:
+    hibernate:
+      ddl-auto: create # create create-drop update validate none(default)
+
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+
+# Logging level
+logging:
+  level:
+    com:
+      airbnb: debug
