chore: ignore 설정 추가 및 의존성 추가

--- a/airbnb/.gitignore
+++ b/airbnb/.gitignore
@@ -230,5 +230,5 @@ gradle-app.setting
 
 # Application configuration
 /application.properties
-
+previous-compilation-data.bin
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,intellij,java,gradle
