--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,6 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java,gradle
+
+src/main/resources/application.properties
+src/main/resources/spy.properties
