--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -6,3 +6,11 @@ spring:
       - app_settings/dev-db-config.yml
       - app_settings/oauth-config.yml
       - app_settings/jwt-config.yml
+
+springdoc:
+  swagger-ui:
+    disable-swagger-default-url: true
+    path: /api-ui.html
+  api-docs:
+    path: /docs
+  default-produces-media-type: application/json
