--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -63,7 +63,10 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured'
 
     // Swagger
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
+    // @Nullable
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 }
 
 tasks.named('test') {
