setting: dependency 추가 및 설정 파일 추가

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=yourbnb
+# JPA 설정
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306?serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=hobin8857
+#만들어진 sql 보여줌
+spring.jpa.properties.hibernate.show_sql=true
+#sql 가독성 좋게 보여줌
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# 애플리케이션 실행 중 통계 데이터를 수집
+spring.jpa.properties.hibernate.generate_statistics=true
+# 수집된 통계 데이터를 로그에 출력하기 위한 로깅 설정
+log4j.logger.org.hibernate.stat=DEBUG
+log4j.logger.org.hibernate.SQL=DEBUG
+# 성능 저하를 일으킬 수 있는 느린 쿼리를 식별하고 분석
+spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=3
