--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,7 @@ jobs:
       - name: Build with gradle
         run: |
           cd ./BE/airdnb
-          ./gradlew clean build
-          find build
+          ./gradlew clean build -x test
 
       - name: Set up Docker Build
         uses: docker/setup-buildx-action@v2
