--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -7,14 +7,16 @@ spring:
       - app_settings/oauth-config.yml
       - app_settings/jwt-config.yml
 
+  jpa:
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
 server:
   forward-headers-strategy: FRAMEWORK
-
-logging:
-  level:
-    com:
-      zaxxer:
-        hikari: error
 
 springdoc:
   swagger-ui:
