--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'io.rest-assured:rest-assured'
+    testImplementation 'com.navercorp.fixturemonkey:fixture-monkey-starter:1.0.18'
 
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
