--- a/BE/airdnb/.gitignore
+++ b/BE/airdnb/.gitignore
@@ -237,4 +237,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# QueryDSL QClass
+**/generated
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,intellij,java
