Feat/#4 숙소 등록 기능 구현 (#8)
* [feat/#4] :construction_worker: chore: assertj 의존성 추가

* [feat/#4] :adhesive_bandage: fix: Address 클래스 필드명 일부 변경 및 새 필드 추가

- 한국 우편주소형태 뿐만 아니라 전세계 우편주소 모두 입력 가능하도록 수정

* [feat/#4] :construction_worker: chore: autoparams 의존성 추가

* [feat/#4] :white_check_mark: test: 숙소 등록 컨트롤러 테스트 작성

* [feat/#4] :construction_worker: chore: autoparams 의존성 제거, fixtureMonkey 의존성 추가

- autoparams보다 사용 예시 자료가 다양한 fixtureMonkey 사용을 진행하기로 결정

* [feat/#4] :sparkles: feat: 숙소 생성 DTO, 숙소 Entity에 유효성 검증 어노테이션 추가

* [feat/#4] :white_check_mark: test: fixturemonkey 사용하여 숙소 서비스 숙소 생성 단위 테스트 구현

* [feat/#4] :construction_worker: chore: url prefix 설정

* [feat/#4] :sparkles: feat: 생성시간, 수정시간 자동생성을 위한 EnableJpaAuditing 어노테이션 추가

- auditing 기능 활성화 후 controller 테스트를 위해 테스트 클래스 상단에 JpaMetamodelMappingContext MockBean 어노테이션 추가

* [feat/#4] :sparkles: feat: 숙소 등록 시 숙소 할인 잔여 횟수 등록, 지정한 해시태그 등록하는 기능 구현

- 해시태그는 중복일 수 없으므로 Set으로 처리

* [feat/#4] :construction_worker: chore: 애플리케이션 실행 시 데이터 초기화를 위한 data.sql 설정

* [feat/#4] :sparkles: feat: 컬렉션 내부 데이터 null 체크하는 어노테이션 생성

* [feat/#4] :adhesive_bandage: fix: AccommodationHashtag가 새로운 엔티티인지 확인할 수 있도록 Persistable 인터페이스 구현

* [feat/#4] :sparkles: feat: 숙소 등록 시 태그, 할인 등 관련 엔티티 함께 저장되도록 영속성 전이 CascadeType.PERSIST로 설정

* [feat/#4] :sparkles: feat: 해시태그가 존재하는지 확인하는 로직 추가

* [feat/#4] :white_check_mark: test: AccommodationServiceTest에 제대로 된 해시태그 등록하는지 확인하기 위한 로직 추가

* [feat/#4] :adhesive_bandage: fix: 숙소 유형, 건물 유형 생성해 관리하도록 수정, Hashtag 외 Facility로 필수 편의시설 등록하도록 수정

- Hashtag는 호스트가 직접 등록해 관리할 수 있고, 필수 편의시설만 선택할 수 있도록 Facility라는 이름으로 변경
- BuildingType, AccommodationType으로 숙소, 건물 유형 관리할 수 있도록 수정

* [feat/#4] :sparkles: feat: 호스트가 직접 입력 가능한 편의시설 내용인 AccommodtionInfo 클래스 추가

- 건물 유형, 숙소 유형, 편의시설 등 기존의 Hashtag로 관리하던 모든 태그들을 세부 타입으로 나눠 관리하도록 결정하였음.
- 따라서 필수 입력 사항 외 나머지 호스트가 직접 입력하고 싶은 편의시설은 AccommodationInfo라는 타입으로 입력할 수 있도록 변경함

* [feat/#4] :adhesive_bandage: fix: AccommodationInfo에서 사용하던 InfoType Fac

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.assertj:assertj-core'
+    testImplementation "com.navercorp.fixturemonkey:fixture-monkey-starter:1.0.17"
+    testImplementation "com.navercorp.fixturemonkey:fixture-monkey-jakarta-validation:1.0.17"
 }
 
 tasks.named('test') {
