--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,18 +18,31 @@ spring:
   # ddl-auto
   jpa:
     hibernate:
-      ddl-auto: create # create create-drop update validate none(default)
+      ddl-auto: create # create create-drop update validate none(default/ on production)
 
     properties:
       hibernate:
         show_sql: true
         format_sql: true
 
+    # data.sql operate after hibernate init (not on production)
+    defer-datasource-initialization: true
+
+  # sql init (not on production)
+  sql:
+    init:
+      mode: always
+
 # Logging level
 logging:
   level:
     com:
       airbnb: debug
+
+# url prefix
+server:
+  servlet:
+    context-path: /api/v1
 
 pwd:
   encrypt:
