--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -76,6 +76,10 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+test {
+    systemProperty 'spring.profiles.active', 'test'
+}
+
 clean {
     delete file('src/main/generated')
 }
