--- a/airdnb/build.gradle
+++ b/airdnb/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 	implementation 'org.hibernate:hibernate-spatial:6.5.2.Final'
 
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
