--- a/airdnb/build.gradle
+++ b/airdnb/build.gradle
@@ -64,13 +64,12 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-def generated = 'src/main/generated'
+def querydslSrcDir = 'src/main/generated'
 
-tasks.withType(JavaCompile).configureEach {
-    options.getGeneratedSourceOutputDirectory().set(file(generated))
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java', querydslSrcDir]
+        }
+    }
 }
-
-clean {
-    delete file(generated)
-}
-
