--- a/BE/airdnb/build.gradle
+++ b/BE/airdnb/build.gradle
@@ -57,5 +57,5 @@ sourceSets {
 
 // gradle clean 시에 QClass 디렉토리 삭제
 clean {
-	delete file(generated)
+	delete file("$projectDir/build/generated")
 }
