--- a/package.json
+++ b/package.json
@@ -6,33 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "svelte": "^4.2.12",
-    "tailwindcss": "^3.4.4",
-    "vite": "^5.2.0",
-    "mdsvex": "^0.11.2",
-    "@roxi/routify": "next",
-    "storybook": "8.2.0-alpha.10",
-    "@storybook/svelte": "8.2.0-alpha.10",
-    "@storybook/svelte-vite": "8.2.0-alpha.10",
-    "@storybook/blocks": "8.2.0-alpha.10",
-    "@storybook/addon-svelte-csf": "^4.1.3",
-    "@storybook/addon-links": "8.2.0-alpha.10",
-    "@storybook/addon-essentials": "8.2.0-alpha.10",
     "@chromatic-com/storybook": "^1.5.0",
-    "@storybook/test": "8.2.0-alpha.10",
-    "@storybook/addon-interactions": "8.2.0-alpha.10",
-    "@tailwindcss/typography": "^0.5.13"
+    "@roxi/routify": "next",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@tailwindcss/typography": "^0.5.13",
+    "autoprefixer": "^10.4.19",
+    "mdsvex": "^0.11.2",
+    "postcss": "^8.4.38",
+    "svelte": "^4.2.18",
+    "svelte-preprocess": "^6.0.1",
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.2.0"
   },
   "dependencies": {
-    "three": "^0.165.0",
-    "@threlte/core": "^7.3.0"
+    "@svelte-plugins/datepicker": "^1.0.9",
+    "@threlte/core": "^7.3.0",
+    "date-fns": "^3.6.0",
+    "date-picker-svelte": "^2.13.0",
+    "three": "^0.165.0"
   }
 }
