--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - run:
           name: SSH Processing
           command: |
-            ssh -o StrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} << 'EOF'
+            ssh -o StrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} \<< 'EOF'
               sudo docker pull seondays/airdnb:latest
               sudo docker-compose down
               sudo docker-compose up -d
