--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,29 @@
 version: 2.1
-orbs:
-  docker: circleci/docker@3.0.0
+
+executors:
+  docker-executor:
+    docker:
+      - image: cimg/base:stable
+
 jobs:
   build:
     docker:
       - image: cimg/openjdk:17.0
     steps:
       - checkout
+      - run:
+          name: Install Docker CLI
+          command: |
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+            sudo apt-get update
+            sudo apt-get -y install docker-ce-cli
+
+      - run:
+          name: Install Docker Compose
+          command: |
+            sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
 
       - run:
           name: create properties
@@ -23,19 +40,11 @@ jobs:
           command: |
             cd ./BE/airdnb
             ./gradlew clean build -x test
-      
+
       - run:
-          name: Setup Docker Buildx
-          command: |
-            mkdir -p ~/.docker/cli-plugins/
-            curl -SL https://github.com/docker/buildx/releases/download/v0.8.2/buildx-v0.8.2.linux-amd64 -o ~/.docker/cli-plugins/docker-buildx
-            chmod +x ~/.docker/cli-plugins/docker-buildx
-            docker buildx version
-      
-      - docker/login:
-          username: ${DOCKER_USERNAME}
-          password: ${DOCKER_PASSWORD}
-      
+          name: Docker login
+          command: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+
       - run:
           name: Docker image Processing
           command: |
@@ -43,14 +52,14 @@ jobs:
             docker build -t seondays/airdnb:latest .
             docker push seondays/airdnb:latest
 
-      - add_ssh_keys:
-          fingerprints:
-            - "${SSH_KEY_FINGERPRINT}"
-
       - run:
           name: SSH Processing
           command: |
-            ssh -o StrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} \<< 'EOF'
+            apk add --no-cache openssh
+            mkdir -p ~/.ssh
+            echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+            chmod 600 ~/.ssh/id_rsa
+            ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
               sudo docker pull seondays/airdnb:latest
               sudo docker-compose down
               sudo docker-compose up -d
@@ -60,8 +69,6 @@ workflows:
   Docker_Compose_run:
     jobs:
       - build:
-          context:
-            - airbnb
           filters:
             branches:
               only:
