--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,50 +1,55 @@
 version: 2.1
 
-executors:
-  docker-executor:
-    docker:
-      - image: cimg/base:stable
+orbs:
+  ssh: circleci/ssh@2.0.0
 
 jobs:
   build:
     docker:
-      - image: cimg/openjdk:17.0
+      - image: circleci/openjdk:17.0
     steps:
       - checkout
-      - run:
-          name: Install Docker CLI
-          command: |
-            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-            sudo apt-get update
-            sudo apt-get -y install docker-ce-cli
 
       - run:
-          name: Install Docker Compose
+          name: Install Docker CLI and Compose
           command: |
+            sudo apt-get update
+            sudo apt-get -y install docker-ce-cli
             sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
 
       - run:
-          name: create properties
+          name: Create properties
           command: touch ./BE/airdnb/src/main/resources/application.yml
+
       - run:
+          name: Set application properties
           command: echo "${APPLICATION}" > ./BE/airdnb/src/main/resources/application.yml
+
       - run:
-          name: grant gradlew
+          name: Grant gradlew permission
           command: |
             cd ./BE/airdnb
             chmod +x ./gradlew
+
       - run:
           name: Build with gradle
           command: |
             cd ./BE/airdnb
             ./gradlew clean build -x test
-
+      
+      - run:
+          name: Setup Docker Buildx
+          command: |
+            mkdir -p ~/.docker/cli-plugins/
+            curl -SL https://github.com/docker/buildx/releases/download/v0.8.2/buildx-v0.8.2.linux-amd64 -o ~/.docker/cli-plugins/docker-buildx
+            chmod +x ~/.docker/cli-plugins/docker-buildx
+            docker buildx version
+      
       - run:
           name: Docker login
           command: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-
+      
       - run:
           name: Docker image Processing
           command: |
@@ -52,14 +57,15 @@ jobs:
             docker build -t seondays/airdnb:latest .
             docker push seondays/airdnb:latest
 
+      - ssh/setup:
+          host: $EC2_HOST
+          user: $EC2_USER
+          fingerprint: $SSH_KEY_FINGERPRINT
+
       - run:
           name: SSH Processing
           command: |
-            apk add --no-cache openssh
-            mkdir -p ~/.ssh
-            echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-            chmod 600 ~/.ssh/id_rsa
-            ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST \<< 'EOF'
+            ssh -o StrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} \<< 'EOF'
               sudo docker pull seondays/airdnb:latest
               sudo docker-compose down
               sudo docker-compose up -d
