--- a/.github/workflows/github-action-client.yaml
+++ b/.github/workflows/github-action-client.yaml
@@ -21,7 +21,8 @@ jobs:
     - name: Add .env
       run: |
         cd ./fe
-        echo "${{ secrets.FRONT_ENV }}" | base64 --decode > ./.env
+        touch .env
+        echo "${{ secrets.FRONT_ENV }}" > .env
 
     - name: Build React App
       run: | 
@@ -32,7 +33,7 @@ jobs:
     - name: Deploy to Prod Server
       uses: appleboy/scp-action@master
       with:
-        host: ${{ secrets.EC2_HOST_PROD }}
+        host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_KEY }}
         source: "fe/dist/client/*"
