--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,15 @@ dependencies {
     implementation 'com.h2database:h2' // h2 - for test
     runtimeOnly 'com.mysql:mysql-connector-j'
 
+    // queryDsl
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // hibernate
+    implementation 'org.hibernate:hibernate-spatial:7.0.0.Alpha2'
+
     // lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
