refactor: 제거된 h2 의존성 추가

--- a/BE/airdnb/build.gradle
+++ b/BE/airdnb/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	// oauth
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+	implementation 'com.h2database:h2'
+
 	//security
 //	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
