[Fix/#13] 숙소 페이지 조회 시 숙소 전체개수 조회 오류 해결 및 응답 형태 변경 (#17)
* [fix/#13] :bug: bugfix: 머지 후 빌드되지 않던 문제 해결 및 Cors 오류 해결

* [fix/#13] :adhesive_bandage: fix: 숙소 페이지 조회 응답 객체 형식 수정

* [fix/#13] :white_check_mark: test: 페이지 조회 구현 변경으로 인한 테스트 실패 해결

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,9 @@ server:
   servlet:
     context-path: ${url-prefix}
 
+cors:
+  originUrl: ${cors-originUrl}
+
 jwt:
   access-token:
     secret: ${jwt-access-token.secret}
