--- a/airdnb/build.gradle
+++ b/airdnb/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'      // java mail 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'// redis 의존성 추가
 
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'    // oauth
+
     testCompileOnly 'org.projectlombok:lombok:1.18.32'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
