--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: ${ddl-auto} # create create-drop update validate none(default/ on production)
-
     properties:
       hibernate:
         show_sql: ${show-sql}
@@ -27,6 +26,9 @@ spring:
 
     # data.sql operate after hibernate init (not on production)
     defer-datasource-initialization: ${defer-datasource-initialization}
+
+    # osiv
+    open-in-view: ${osiv}
 
   # sql init (not on production)
   sql:
